# gemini-prompt-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
assets/: styles.css
data/: cases.json
eval/: run_eval.py
prompts/: variants.yaml
src/prompt_lab/: cli.py  genai_client.py
