[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-prompt-lab"
version = "0.1.0"
description = "Prompt-engineering lab for Google's Gemini"
requires-python = ">=3.9"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gpl = "prompt_lab.cli:app"
